--- a/common/core/CMakeLists.txt
+++ b/common/core/CMakeLists.txt
@@ -1,5 +1,5 @@
 list_include_file(INC_FILE_LIST "${CMAKE_CURRENT_SOURCE_DIR}/inc")
 list_source_file(SRC_FILE_LIST "${CMAKE_CURRENT_SOURCE_DIR}/src")
-add_library(c_poet_core SHARED ${INC_FILE_LIST} ${SRC_FILE_LIST})
-target_link_libraries(c_poet_core PUBLIC Qt${QT_VERSION_MAJOR}::Widgets)
+add_library(core SHARED ${INC_FILE_LIST} ${SRC_FILE_LIST})
+target_link_libraries(core PUBLIC Qt${QT_VERSION_MAJOR}::Widgets)
 add_subdirectory(test)
