--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -2,4 +2,5 @@ add_subdirectory(core)
 add_subdirectory(plugin)
 add_subdirectory(editor)
 add_subdirectory(theme)
-add_subdirectory(zip)
+add_subdirectory(compress)
+add_subdirectory(logger)
