--- a/desktop/starter/CMakeLists.txt
+++ b/desktop/starter/CMakeLists.txt
@@ -2,4 +2,5 @@ list_include_file(INC_FILE_LIST "${CMAKE_CURRENT_SOURCE_DIR}/inc")
 list_source_file(SRC_FILE_LIST "${CMAKE_CURRENT_SOURCE_DIR}/src")
 add_executable(Clever-note-desktop ${INC_FILE_LIST} ${SRC_FILE_LIST})
 target_link_libraries(Clever-note-desktop PUBLIC core)
+target_link_libraries(Clever-note-desktop PUBLIC Qt${QT_VERSION_MAJOR}::Widgets)
 add_subdirectory(test)
